--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
+    <meta name="google-site-verification" content="Nrj6LhEqGdG2t4hCt8fHU7P5X6kFpA0LLtRVqNkIMM4" />
     <link rel="icon" type="image/svg+xml" href="/Unlicharge_basic_logo.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Unlicharge</title>
